# FastAPI_rag_and_appointment

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/practise/: __init__.py  config.py  main.py
src/practise/db/: mongo.py  redis_client.py
src/practise/llm/: gemini_llm.py  rag_chain.py  splitter.py
src/practise/models/: file_metadata.py  user.py
src/practise/routes/: appointment_routes.py  file_routes.py  mongo_routes.py  query_routes.py  redis_routes.py  tes.py
src/practise/utils/: file_utils.py  mail_utils.py
